# verdin

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
tests/: test_datasource.py  test_pipe.py  test_query.py  test_utils.py  test_worker.py  utils.py
tests/integration/: conftest.py  test_client.py  test_datasource.py  test_datasources.py  test_events.py  test_pipe.py  test_pipes.py  test_query.py  test_tokens.py  test_variables.py
tests/integration/project/: .cursorrules  CLAUDE.md
tests/integration/project/datasources/: simple.datasource  trips.datasource
tests/integration/project/endpoints/: simple_kv.pipe  simple_pipe.pipe
verdin/: __init__.py  client.py  config.py  datasource.py  pipe.py  query.py  tinybird.py  worker.py
verdin/api/: __init__.py  apis.py  base.py  datasources.py  events.py  pipes.py  query.py  tokens.py  variables.py
verdin/test/: cli.py  container.py
