[metadata]
name = verdin
version = attr: verdin.__version__
url = https://github.com/localstack/verdin
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = A Python SDK for Tinybird
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Networking

[options]
zip_safe = False
packages = find:

install_requires =
    requests>=2.20.0

[options.extras_require]
dev =
    pytest>=6.2.4
    black>=22.1
    isort>=5.10.1
    pytest_httpserver>=1.0.1
    coverage[toml]>=5.0
    pytest-cov>=2.7.1
    coveralls

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md

